client/src/components/Button/Button.css
.button {
  display: flex;
  justify-content: center;
  position: relative;
  background-color: var(--primary-500);
  color: var(--white);
  border: 1px solid transparent;
  padding: 7px 16px;
  line-height: 1.5;
  min-width: 150px;

  align-items: center;
  border-radius: 35px;
  font-size: 14px;
  font-weight: 500;
  justify-content: center;

  transition-duration: 0.2s;
  transition-property: all;
  transition-timing-function: ease;

  cursor: pointer;
}

.button:hover {
  background-color: var(--white);
  border-color: var(--primary-500);
  color: var(--primary-500);

  transition-duration: 0.2s;
  transition-property: all;
  transition-timing-function: ease;
}

.button.inverted {
  border: 1px solid var(--primary-500);
  background-color: var(--white);
  border-color: var(--primary-500);
  color: var(--primary-500);
}
.button.loading {
  opacity: 0.6;
}

.button.inverted:hover {
  background-color: var(--primary-500);
  color: var(--white);
}

